--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             overflow-x: hidden;
             transition: background-color 0.5s ease, color 0.5s ease;
         }
-        .font-header {
-            font-family: 'Fredoka', sans-serif;
-        }
+        .font-header { font-family: 'Fredoka', sans-serif; }
         .btn-candy {
             background: linear-gradient(135deg, #EA6F23, #F28C4F);
             box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.4), 0 10px 15px -3px rgba(234, 111, 35, 0.3);
